--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <link rel="icon" type="png" href="/photos/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuickBite</title>
-  </head>
-  <body class=" bg-[url('/public/photos/bg.svg')] bg-[#ffe0e0] md:bg-[url('/public/photos/bg-md.svg')] bg-no-repeat h-full">
-    <div id="root"></div>     
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+    <head/>
+    <body class="bg-[url('%PUBLIC_URL%/photos/bg.svg')] bg-[#ffe0e0] md:bg-[url('%PUBLIC_URL%/photos/bg-md.svg')] bg-no-repeat h-full">
+      <div id="root"></div>
+      <script type="module" src="%PUBLIC_URL%/src/main.jsx"></script>
+    </body>
