--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="png" href="/photos/icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QuickBite</title>
-  </head>
-  <body class=" bg-[url('/photos/bg.svg')] bg-[#ffe0e0] md:bg-[url('/photos/bg-md.svg')] bg-no-repeat h-full">
-    <div id="root"></div>     
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/QuickBite_FoodWebsite/photos/icon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>QuickBite</title>
+</head>
+<body class="bg-[url('/QuickBite_FoodWebsite/photos/bg.svg')] bg-[#ffe0e0] md:bg-[url('/QuickBite_FoodWebsite/photos/bg-md.svg')] bg-no-repeat h-full">
+  <div id="root"></div>     
+</body>
