--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="https://github.com/piyushkumar-prog/QuickBite_FoodWebsite/blob/main/public%2Fphotos%2Ficon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QuickBite</title>
-</head>
-<body class="bg-[url('https://github.com/piyushkumar-prog/QuickBite_FoodWebsite/blob/main/public%2Fphotos%2Fbg.svg')] bg-[#ffe0e0] md:bg-[url('https://github.com/piyushkumar-prog/QuickBite_FoodWebsite/blob/main/public%2Fphotos%2Fbg-md.svg')] bg-no-repeat h-full">
-  <div id="root"></div>     
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="png" href="/photos/icon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>QuickBite</title>
+  </head>
+  <body class=" bg-[url('/public/photos/bg.svg')] bg-[#ffe0e0] md:bg-[url('/public/photos/bg-md.svg')] bg-no-repeat h-full">
+    <div id="root"></div>     
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
